--- a/99_Practice/src/main/webapp/index.html
+++ b/99_Practice/src/main/webapp/index.html
@@ -27,8 +27,16 @@
 			
 			<li><a href="/practice/views/practice1_random.html">연습1 랜덤2</a><li>	<!-- 절대경로 -->
 			
+			<br>
+
+			<li><a href="views/error/Wrong_url.jsp">오류 화면</a><li>	<!-- 상대경로 -->
 			
+			<br>
+			
+			<li><a href="views/Wrong_url">오류 화면2</a><li>	<!-- 상대경로 -->
 		</ul>
 	</nav>
+	
+	<input type="number">
 </body>
 </html>
